# sonoplayer

./: .clang-tidy  CMakeLists.txt  fftw.cmake  libsndfile.cmake  main.cpp
include/: alloc.hpp  common.hpp  data_manager.hpp  error.hpp  fft_routine.hpp  iobservable.hpp  iobserver.hpp  model.hpp  samples_loader.hpp  soundfile.hpp  spectr.hpp  spectrogram.hpp  spectrogram_builder.hpp  task.hpp  window.hpp  windowing.hpp
resources/: blackman.txt  calculate_spectrogram.py  flattop.txt  ft_natural_row.txt  hamming.txt  hanning.txt  spectral-map.gnuplot
src/: CMakeLists.txt  data_manager.cpp  error.cpp  fft_routine.cpp  main.cpp  model.cpp  samples_loader.cpp  soundfile.cpp  spectr.cpp  spectrogram.cpp  spectrogram_builder.cpp  window.cpp  windowing.cpp
tests/: CMakeLists.txt  test_fft_routine.cpp  test_samples_loader.cpp  test_soundfile.cpp  test_spectr.cpp  test_spectrogram.cpp  test_window.cpp  test_windowing.cpp
